Fixed sponsor logo cutoff issue.

--- a/pycon/static/less/responsive-site.less
+++ b/pycon/static/less/responsive-site.less
@@ -351,17 +351,6 @@ body.home {
 	      	}
 		}
 	}
-	.carousel-inner { 
-		@media (max-width: 1200px) {
-			height: 300px;
-		}
-		@media (max-width: @breakTablet) {
-			height: 450px;
-		}
-		@media (max-width: @breakMobileLandscape) {
-			height: 100%;
-		}
-	}
 	.sponsor-scroll-item {
 		@media (max-width: 1200px) {
 			width: 20%;
@@ -375,17 +364,6 @@ body.home {
 	}
 	  /* Slideshow nav
   ==================== */
-    nav#slider-nav {
-    	@media (max-width: @breakTablet) {
-	    	margin-left: 39%; 
-	    }
-    	@media (max-width: @breakMobileLandscape) {
-	    	margin-left: 35%; 
-	    }
-    	@media (max-width: @breakMobile) {
-	    	margin-left: 27%; 
-	    }
-    }
 	.scroll-title {
 		@media (max-width: @breakTablet) {
 			font-size: 30px;
