--- a/pycon/static/less/site.less
+++ b/pycon/static/less/site.less
@@ -1012,7 +1012,6 @@ body.home {
   }
 
   .carousel-inner {
-    height: 250px;
     div.item {
       width: 100%;
       padding: 10px 0 40px 0;
@@ -1023,7 +1022,7 @@ body.home {
   .sponsor-scroll-item {
     cursor: pointer;
     float:left;
-    width: 200px;
+    width: 195px;
     height: 100px;
     background: none center center no-repeat;
     background-size: 95px auto;
